Make EmitNtpStatistics() private.

It's still called from the same places, but through public functions
that describe what is happening and why, rather than exposing an
implementation detail.

Also, add an enum so that it's immediately obvious at the call site why
EmitNtpStatistics() is being called.

BUG=625990

Review-Url: https://codereview.chromium.org/2127783002
Cr-Commit-Position: refs/heads/master@{#404636}

Former-commit-id: c48795c69de4878814ca44038544c1afd78c1dce