chrome/browser/ui/search/instant_tab.h
@@ -22,8 +22,9 @@ class InstantTab : public InstantPage {
   // the page supports the Instant API.
   void Init(content::WebContents* contents);
 
-  // Logs a number of statistics regarding the NTP.
-  static void EmitNtpStatistics(content::WebContents* contents);
+  // Logs statistics regarding the NTP.
+  static void TabDeactivated(content::WebContents* contents);
+  static void MostVisitedItemsChanged(content::WebContents* contents);
 
  private:
   // Overridden from InstantPage:
